# horiba-cpp-sdk

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e__building_8md.html  _r_e_a_d_m_e__dependencies_8md.html  _r_e_a_d_m_e__docker_8md.html  about.html  about_8dox.html  annotated.html  build_output.txt  ccd_8h.html  ccds__discovery_8h.html  classhoriba_1_1communication_1_1_command.html  classhoriba_1_1communication_1_1_communicator.html  classhoriba_1_1communication_1_1_response.html  classhoriba_1_1communication_1_1_web_socket_communicator.html  classhoriba_1_1devices_1_1_charge_coupled_devices_discovery.html  classhoriba_1_1devices_1_1_device_discovery.html  classhoriba_1_1devices_1_1_device_manager.html  classhoriba_1_1devices_1_1_i_c_l_device_manager.html  classhoriba_1_1devices_1_1_monochromators_discovery.html  classhoriba_1_1devices_1_1single__devices_1_1_charge_coupled_device.html  classhoriba_1_1devices_1_1single__devices_1_1_device.html  classhoriba_1_1devices_1_1single__devices_1_1_monochromator.html  classhoriba_1_1os_1_1_process.html  classhoriba_1_1os_1_1_windows_process.html  command_8h.html  communicator_8h.html  device_8h.html  device__discovery_8h.html  device__manager_8h.html  (+37 more)
.github/: PULL_REQUEST_TEMPLATE.md  constants.env
.github/template/: template_name  template_repository
.github/workflows/: ci.yml  documentation.yml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
.github/workflows/old/: ci.yml  codeql-analysis.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
documentation/: CMakeLists.txt  Doxyfile  conf.py
documentation/pages/: about.dox  gains_and_speeds.dox  gains_and_speeds.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/horiba_cpp_sdk/: sample_library.hpp
include/horiba_cpp_sdk/communication/: command.h  communicator.h  response.h  websocket_communicator.h
include/horiba_cpp_sdk/devices/: ccds_discovery.h  device_discovery.h  device_manager.h  icl_device_manager.h  monos_discovery.h
include/horiba_cpp_sdk/devices/single_devices/: ccd.h  device.h  mono.h
include/horiba_cpp_sdk/os/: process.h  windows_process.h
src/: CMakeLists.txt
src/communication/: command.cpp  response.cpp  websocket_communicator.cpp
src/devices/: ccds_discovery.cpp  icl_device_manager.cpp  monos_discovery.cpp
src/devices/single_devices/: ccd.cpp  device.cpp  mono.cpp
src/examples/: CMakeLists.txt  README.md
src/examples/center_scan/: CMakeLists.txt  main.cpp
src/examples/gain_speed_info/: CMakeLists.txt  main.cpp
src/examples/websockets_sample/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/os/: windows_process.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  fake_icl_server.h  icl_exe.h  start_fake_icl_server_listener.h  tests.cpp
test/communication/: test_command.cpp  test_websocket_communicator.cpp
test/devices/: test_ccds_discovery.cpp  test_icl_device_manager.cpp  test_monos_discovery.cpp
test/devices/single_devices/: test_ccd.cpp  test_ccd_on_hw.cpp  test_mono.cpp  test_mono_on_hw.cpp
test/fake_icl_responses/: ccd.json  monochromator.json
test/os/: fake_process.h
